--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-left: 50px;
+  margin-left: 75px;
 }
 
 .hero__title {
